@@ -17,12 +17,11 @@
 
 package org.apache.ignite.internal.processors.query.calcite.exec;
 
-import static org.apache.ignite.internal.util.CollectionUtils.nullOrEmpty;
-
-import com.google.common.collect.ImmutableMap;
 import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+
 import org.apache.ignite.internal.processors.query.calcite.exec.rel.Inbox;
 import org.apache.ignite.internal.processors.query.calcite.exec.rel.Outbox;
 import org.apache.ignite.internal.processors.query.calcite.message.InboxCloseMessage;
@@ -39,6 +38,8 @@ import org.apache.ignite.lang.IgniteInternalCheckedException;
 import org.apache.ignite.lang.IgniteInternalException;
 import org.apache.ignite.lang.IgniteLogger;
 
+import static org.apache.ignite.internal.util.CollectionUtils.nullOrEmpty;
+
 /**
  *
  */
@@ -47,105 +48,28 @@ public class ExchangeServiceImpl implements ExchangeService {
 
     private static final SqlQueryMessagesFactory FACTORY = new SqlQueryMessagesFactory();
 
-    /**
-     *
-     */
+    /** */
     private final QueryTaskExecutor taskExecutor;
 
-    /**
-     *
-     */
+    /** */
     private final MailboxRegistry mailboxRegistry;
 
-    /**
-     *
-     */
+    /** */
     private final MessageService msgSrvc;
 
+    /** */
     public ExchangeServiceImpl(
-            QueryTaskExecutor taskExecutor,
-            MailboxRegistry mailboxRegistry,
-            MessageService msgSrvc
+        QueryTaskExecutor taskExecutor,
+        MailboxRegistry mailboxRegistry,
+        MessageService msgSrvc
     ) {
         this.taskExecutor = taskExecutor;
         this.mailboxRegistry = mailboxRegistry;
         this.msgSrvc = msgSrvc;
-
-        init();
     }
 
     /** {@inheritDoc} */
-    @Override
-    public <Row> void sendBatch(String nodeId, UUID qryId, long fragmentId, long exchangeId, int batchId,
-            boolean last, List<Row> rows) throws IgniteInternalCheckedException {
-        msgSrvc.send(
-                nodeId,
-                FACTORY.queryBatchMessage()
-                        .queryId(qryId)
-                        .fragmentId(fragmentId)
-                        .exchangeId(exchangeId)
-                        .batchId(batchId)
-                        .last(last)
-                        .rows(Commons.cast(rows))
-                        .build()
-        );
-    }
-
-    /** {@inheritDoc} */
-    @Override
-    public void acknowledge(String nodeId, UUID qryId, long fragmentId, long exchangeId, int batchId)
-            throws IgniteInternalCheckedException {
-        msgSrvc.send(
-                nodeId,
-                FACTORY.queryBatchAcknowledgeMessage()
-                        .queryId(qryId)
-                        .fragmentId(fragmentId)
-                        .exchangeId(exchangeId)
-                        .batchId(batchId)
-                        .build()
-        );
-    }
-
-    /** {@inheritDoc} */
-    @Override
-    public void closeOutbox(String nodeId, UUID qryId, long fragmentId, long exchangeId) throws IgniteInternalCheckedException {
-        msgSrvc.send(
-                nodeId,
-                FACTORY.outboxCloseMessage()
-                        .queryId(qryId)
-                        .fragmentId(fragmentId)
-                        .exchangeId(exchangeId)
-                        .build()
-        );
-    }
-
-    /** {@inheritDoc} */
-    @Override
-    public void closeInbox(String nodeId, UUID qryId, long fragmentId, long exchangeId) throws IgniteInternalCheckedException {
-        msgSrvc.send(
-                nodeId,
-                FACTORY.inboxCloseMessage()
-                        .queryId(qryId)
-                        .fragmentId(fragmentId)
-                        .exchangeId(exchangeId)
-                        .build()
-        );
-    }
-
-    /** {@inheritDoc} */
-    @Override
-    public void sendError(String nodeId, UUID qryId, long fragmentId, Throwable err) throws IgniteInternalCheckedException {
-        msgSrvc.send(
-                nodeId,
-                FACTORY.errorMessage()
-                        .queryId(qryId)
-                        .fragmentId(fragmentId)
-                        .error(err)
-                        .build()
-        );
-    }
-
-    private void init() {
+    @Override public void start() {
         msgSrvc.register((n, m) -> onMessage(n, (InboxCloseMessage) m), SqlQueryMessageGroup.INBOX_CLOSE_MESSAGE);
         msgSrvc.register((n, m) -> onMessage(n, (OutboxCloseMessage) m), SqlQueryMessageGroup.OUTBOX_CLOSE_MESSAGE);
         msgSrvc.register((n, m) -> onMessage(n, (QueryBatchAcknowledgeMessage) m), SqlQueryMessageGroup.QUERY_BATCH_ACK);
@@ -153,80 +77,138 @@ public class ExchangeServiceImpl implements ExchangeService {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public boolean alive(String nodeId) {
+    @Override public <Row> void sendBatch(String nodeId, UUID qryId, long fragmentId, long exchangeId, int batchId,
+        boolean last, List<Row> rows) throws IgniteInternalCheckedException {
+        msgSrvc.send(
+            nodeId,
+            FACTORY.queryBatchMessage()
+                .queryId(qryId)
+                .fragmentId(fragmentId)
+                .exchangeId(exchangeId)
+                .batchId(batchId)
+                .last(last)
+                .rows(Commons.cast(rows))
+                .build()
+        );
+    }
+
+    /** {@inheritDoc} */
+    @Override public void acknowledge(String nodeId, UUID qryId, long fragmentId, long exchangeId, int batchId)
+        throws IgniteInternalCheckedException {
+        msgSrvc.send(
+            nodeId,
+            FACTORY.queryBatchAcknowledgeMessage()
+                .queryId(qryId)
+                .fragmentId(fragmentId)
+                .exchangeId(exchangeId)
+                .batchId(batchId)
+                .build()
+        );
+    }
+
+    /** {@inheritDoc} */
+    @Override public void closeOutbox(String nodeId, UUID qryId, long fragmentId, long exchangeId) throws IgniteInternalCheckedException {
+        msgSrvc.send(
+            nodeId,
+            FACTORY.outboxCloseMessage()
+                .queryId(qryId)
+                .fragmentId(fragmentId)
+                .exchangeId(exchangeId)
+                .build()
+        );
+    }
+
+    /** {@inheritDoc} */
+    @Override public void closeInbox(String nodeId, UUID qryId, long fragmentId, long exchangeId) throws IgniteInternalCheckedException {
+        msgSrvc.send(
+            nodeId,
+            FACTORY.inboxCloseMessage()
+                .queryId(qryId)
+                .fragmentId(fragmentId)
+                .exchangeId(exchangeId)
+                .build()
+        );
+    }
+
+    /** {@inheritDoc} */
+    @Override public void sendError(String nodeId, UUID qryId, long fragmentId, Throwable err) throws IgniteInternalCheckedException {
+        msgSrvc.send(
+            nodeId,
+            FACTORY.errorMessage()
+                .queryId(qryId)
+                .fragmentId(fragmentId)
+                .error(err)
+                .build()
+        );
+    }
+
+    /** {@inheritDoc} */
+    @Override public boolean alive(String nodeId) {
         return msgSrvc.alive(nodeId);
     }
 
-    /**
-     *
-     */
+    /** */
     protected void onMessage(String nodeId, InboxCloseMessage msg) {
         Collection<Inbox<?>> inboxes = mailboxRegistry.inboxes(msg.queryId(), msg.fragmentId(), msg.exchangeId());
 
         if (!nullOrEmpty(inboxes)) {
-            for (Inbox<?> inbox : inboxes) {
+            for (Inbox<?> inbox : inboxes)
                 inbox.context().execute(inbox::close, inbox::onError);
-            }
-        } else if (LOG.isDebugEnabled()) {
-            LOG.debug("Stale inbox cancel message received: ["
-                    + "nodeId=" + nodeId
-                    + ", queryId=" + msg.queryId()
-                    + ", fragmentId=" + msg.fragmentId()
-                    + ", exchangeId=" + msg.exchangeId() + "]");
+        }
+        else if (LOG.isDebugEnabled()) {
+            LOG.debug("Stale inbox cancel message received: [" +
+                "nodeId=" + nodeId +
+                ", queryId=" + msg.queryId() +
+                ", fragmentId=" + msg.fragmentId() +
+                ", exchangeId=" + msg.exchangeId() + "]");
         }
     }
 
-    /**
-     *
-     */
+    /** */
     protected void onMessage(String nodeId, OutboxCloseMessage msg) {
         Collection<Outbox<?>> outboxes = mailboxRegistry.outboxes(msg.queryId(), msg.fragmentId(), msg.exchangeId());
 
         if (!nullOrEmpty(outboxes)) {
-            for (Outbox<?> outbox : outboxes) {
+            for (Outbox<?> outbox : outboxes)
                 outbox.context().execute(outbox::close, outbox::onError);
-            }
 
-            for (Outbox<?> outbox : outboxes) {
+            for (Outbox<?> outbox : outboxes)
                 outbox.context().execute(outbox.context()::cancel, outbox::onError);
-            }
-        } else if (LOG.isDebugEnabled()) {
-            LOG.debug("Stale outbox cancel message received: ["
-                    + "nodeId=" + nodeId
-                    + ", queryId=" + msg.queryId()
-                    + ", fragmentId=" + msg.fragmentId()
-                    + ", exchangeId=" + msg.exchangeId() + "]");
+        }
+        else if (LOG.isDebugEnabled()) {
+            LOG.debug("Stale outbox cancel message received: [" +
+                "nodeId=" + nodeId +
+                ", queryId=" + msg.queryId() +
+                ", fragmentId=" + msg.fragmentId() +
+                ", exchangeId=" + msg.exchangeId() + "]");
         }
     }
 
-    /**
-     *
-     */
+    /** */
     protected void onMessage(String nodeId, QueryBatchAcknowledgeMessage msg) {
         Outbox<?> outbox = mailboxRegistry.outbox(msg.queryId(), msg.exchangeId());
 
         if (outbox != null) {
             try {
                 outbox.onAcknowledge(nodeId, msg.batchId());
-            } catch (Throwable e) {
+            }
+            catch (Throwable e) {
                 outbox.onError(e);
 
                 throw new IgniteInternalException("Unexpected exception", e);
             }
-        } else if (LOG.isDebugEnabled()) {
-            LOG.debug("Stale acknowledge message received: ["
-                    + "nodeId=" + nodeId + ", "
-                    + "queryId=" + msg.queryId() + ", "
-                    + "fragmentId=" + msg.fragmentId() + ", "
-                    + "exchangeId=" + msg.exchangeId() + ", "
-                    + "batchId=" + msg.batchId() + "]");
+        }
+        else if (LOG.isDebugEnabled()) {
+            LOG.debug("Stale acknowledge message received: [" +
+                "nodeId=" + nodeId + ", " +
+                "queryId=" + msg.queryId() + ", " +
+                "fragmentId=" + msg.fragmentId() + ", " +
+                "exchangeId=" + msg.exchangeId() + ", " +
+                "batchId=" + msg.batchId() + "]");
         }
     }
 
-    /**
-     *
-     */
+    /** */
     protected void onMessage(String nodeId, QueryBatchMessage msg) {
         Inbox<?> inbox = mailboxRegistry.inbox(msg.queryId(), msg.exchangeId());
 
@@ -234,7 +216,7 @@ public class ExchangeServiceImpl implements ExchangeService {
             // first message sent before a fragment is built
             // note that an inbox source fragment id is also used as an exchange id
             Inbox<?> newInbox = new Inbox<>(baseInboxContext(nodeId, msg.queryId(), msg.fragmentId()),
-                    this, mailboxRegistry, msg.exchangeId(), msg.exchangeId());
+                this, mailboxRegistry, msg.exchangeId(), msg.exchangeId());
 
             inbox = mailboxRegistry.register(newInbox);
         }
@@ -242,18 +224,20 @@ public class ExchangeServiceImpl implements ExchangeService {
         if (inbox != null) {
             try {
                 inbox.onBatchReceived(nodeId, msg.batchId(), msg.last(), Commons.cast(msg.rows()));
-            } catch (Throwable e) {
+            }
+            catch (Throwable e) {
                 inbox.onError(e);
 
                 throw new IgniteInternalException("Unexpected exception", e);
             }
-        } else if (LOG.isDebugEnabled()) {
-            LOG.debug("Stale batch message received: ["
-                    + "nodeId=" + nodeId + ", "
-                    + "queryId=" + msg.queryId() + ", "
-                    + "fragmentId=" + msg.fragmentId() + ", "
-                    + "exchangeId=" + msg.exchangeId() + ", "
-                    + "batchId=" + msg.batchId() + "]");
+        }
+        else if (LOG.isDebugEnabled()) {
+            LOG.debug("Stale batch message received: [" +
+                "nodeId=" + nodeId + ", " +
+                "queryId=" + msg.queryId() + ", " +
+                "fragmentId=" + msg.fragmentId() + ", " +
+                "exchangeId=" + msg.exchangeId() + ", " +
+                "batchId=" + msg.batchId() + "]");
         }
     }
 
@@ -262,17 +246,22 @@ public class ExchangeServiceImpl implements ExchangeService {
      */
     private ExecutionContext<?> baseInboxContext(String nodeId, UUID qryId, long fragmentId) {
         return new ExecutionContext<>(
-                taskExecutor,
-                PlanningContext.builder()
-                        .originatingNodeId(nodeId)
-                        .build(),
-                qryId,
-                new FragmentDescription(
-                        fragmentId,
-                        null,
-                        null,
-                        null),
+            taskExecutor,
+            PlanningContext.builder()
+                .originatingNodeId(nodeId)
+                .build(),
+            qryId,
+            new FragmentDescription(
+                fragmentId,
                 null,
-                ImmutableMap.of());
+                null,
+                null),
+            null,
+            Map.of());
+    }
+
+    /** {@inheritDoc} */
+    @Override public void stop() {
+        // No-op.
     }
 }
