@@ -17,8 +17,8 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
+
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptCost;
 import org.apache.calcite.plan.RelOptPlanner;
@@ -34,9 +34,7 @@ import org.apache.calcite.sql.SqlKind;
 import org.apache.calcite.util.Pair;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCost;
 
-/**
- *
- */
+/** */
 public class IgniteLimit extends SingleRel implements IgniteRel {
     /** In case the fetch value is a DYNAMIC_PARAM. */
     private static final double FETCH_IS_PARAM_FACTOR = 0.01;
@@ -54,31 +52,29 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
      * Constructor.
      *
      * @param cluster Cluster.
-     * @param traits  Trait set.
-     * @param child   Input relational expression.
-     * @param offset  Offset.
-     * @param fetch   Limit.
+     * @param traits Trait set.
+     * @param child Input relational expression.
+     * @param offset Offset.
+     * @param fetch Limit.
      */
     public IgniteLimit(
-            RelOptCluster cluster,
-            RelTraitSet traits,
-            RelNode child,
-            RexNode offset,
-            RexNode fetch
+        RelOptCluster cluster,
+        RelTraitSet traits,
+        RelNode child,
+        RexNode offset,
+        RexNode fetch
     ) {
         super(cluster, traits, child);
         this.offset = offset;
         this.fetch = fetch;
     }
 
-    /**
-     *
-     */
+    /** */
     public IgniteLimit(RelInput input) {
         super(
-                input.getCluster(),
-                input.getTraitSet().replace(IgniteConvention.INSTANCE),
-                input.getInputs().get(0)
+            input.getCluster(),
+            input.getTraitSet().replace(IgniteConvention.INSTANCE),
+            input.getInputs().get(0)
         );
 
         offset = input.getExpression("offset");
@@ -86,14 +82,12 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public final IgniteLimit copy(RelTraitSet traitSet, List<RelNode> inputs) {
+    @Override public final IgniteLimit copy(RelTraitSet traitSet, List<RelNode> inputs) {
         return new IgniteLimit(getCluster(), traitSet, sole(inputs), offset, fetch);
     }
 
     /** {@inheritDoc} */
-    @Override
-    public RelWriter explainTerms(RelWriter pw) {
+    @Override public RelWriter explainTerms(RelWriter pw) {
         super.explainTerms(pw);
         pw.itemIf("offset", offset, offset != null);
         pw.itemIf("fetch", fetch, fetch != null);
@@ -101,36 +95,30 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public <T> T accept(IgniteRelVisitor<T> visitor) {
+    @Override public <T> T accept(IgniteRelVisitor<T> visitor) {
         return visitor.visit(this);
     }
 
     /** {@inheritDoc} */
-    @Override
-    public Pair<RelTraitSet, List<RelTraitSet>> passThroughTraits(RelTraitSet required) {
-        if (required.getConvention() != IgniteConvention.INSTANCE) {
+    @Override public Pair<RelTraitSet, List<RelTraitSet>> passThroughTraits(RelTraitSet required) {
+        if (required.getConvention() != IgniteConvention.INSTANCE)
             return null;
-        }
 
-        return Pair.of(required, ImmutableList.of(required));
+        return Pair.of(required, List.of(required));
     }
 
     /** {@inheritDoc} */
-    @Override
-    public Pair<RelTraitSet, List<RelTraitSet>> deriveTraits(RelTraitSet childTraits, int childId) {
+    @Override public Pair<RelTraitSet, List<RelTraitSet>> deriveTraits(RelTraitSet childTraits, int childId) {
         assert childId == 0;
 
-        if (childTraits.getConvention() != IgniteConvention.INSTANCE) {
+        if (childTraits.getConvention() != IgniteConvention.INSTANCE)
             return null;
-        }
 
-        return Pair.of(childTraits, ImmutableList.of(childTraits));
+        return Pair.of(childTraits, List.of(childTraits));
     }
 
     /** {@inheritDoc} */
-    @Override
-    public RelOptCost computeSelfCost(RelOptPlanner planner, RelMetadataQuery mq) {
+    @Override public RelOptCost computeSelfCost(RelOptPlanner planner, RelMetadataQuery mq) {
         double inputRowCount = mq.getRowCount(getInput());
 
         double lim = fetch != null ? doubleFromRex(fetch, inputRowCount * FETCH_IS_PARAM_FACTOR) : inputRowCount;
@@ -142,8 +130,7 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public double estimateRowCount(RelMetadataQuery mq) {
+    @Override public double estimateRowCount(RelMetadataQuery mq) {
         double inputRowCount = mq.getRowCount(getInput());
 
         double lim = fetch != null ? doubleFromRex(fetch, inputRowCount * FETCH_IS_PARAM_FACTOR) : inputRowCount;
@@ -157,12 +144,12 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
      */
     private double doubleFromRex(RexNode n, double def) {
         try {
-            if (n.isA(SqlKind.LITERAL)) {
-                return ((RexLiteral) n).getValueAs(Integer.class);
-            } else {
+            if (n.isA(SqlKind.LITERAL))
+                return ((RexLiteral)n).getValueAs(Integer.class);
+            else
                 return def;
-            }
-        } catch (Exception e) {
+        }
+        catch (Exception e) {
             assert false : "Unable to extract value: " + e.getMessage();
 
             return def;
@@ -184,8 +171,7 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public IgniteRel clone(RelOptCluster cluster, List<IgniteRel> inputs) {
+    @Override public IgniteRel clone(RelOptCluster cluster, List<IgniteRel> inputs) {
         return new IgniteLimit(cluster, getTraitSet(), sole(inputs), offset, fetch);
     }
 }
