@@ -17,8 +17,8 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel.agg;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
+
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelCollations;
 import org.apache.calcite.util.Pair;
@@ -29,19 +29,17 @@ import org.apache.ignite.internal.processors.query.calcite.trait.TraitsAwareIgni
  */
 interface IgniteHashAggregateBase extends TraitsAwareIgniteRel {
     /** {@inheritDoc} */
-    @Override
-    default Pair<RelTraitSet, List<RelTraitSet>> passThroughCollation(RelTraitSet nodeTraits, List<RelTraitSet> inputTraits) {
+    @Override default Pair<RelTraitSet, List<RelTraitSet>> passThroughCollation(RelTraitSet nodeTraits, List<RelTraitSet> inputTraits) {
         // Since it's a hash aggregate it erases collation.
         return Pair.of(nodeTraits.replace(RelCollations.EMPTY),
-                ImmutableList.of(inputTraits.get(0).replace(RelCollations.EMPTY)));
+            List.of(inputTraits.get(0).replace(RelCollations.EMPTY)));
     }
 
     /** {@inheritDoc} */
-    @Override
-    default List<Pair<RelTraitSet, List<RelTraitSet>>> deriveCollation(RelTraitSet nodeTraits, List<RelTraitSet> inputTraits) {
+    @Override default List<Pair<RelTraitSet, List<RelTraitSet>>> deriveCollation(RelTraitSet nodeTraits, List<RelTraitSet> inputTraits) {
         // Since it's a hash aggregate it erases collation.
-        return ImmutableList.of(Pair.of(nodeTraits.replace(RelCollations.EMPTY),
-                ImmutableList.of(inputTraits.get(0).replace(RelCollations.EMPTY))));
+        return List.of(Pair.of(nodeTraits.replace(RelCollations.EMPTY),
+            List.of(inputTraits.get(0).replace(RelCollations.EMPTY))));
     }
 
 }
