@@ -17,24 +17,15 @@
 
 package org.apache.ignite.internal.processors.query.calcite.planner;
 
-import static org.apache.calcite.tools.Frameworks.createRootSchema;
-import static org.apache.calcite.tools.Frameworks.newConfigBuilder;
-import static org.apache.ignite.internal.processors.query.calcite.externalize.RelJsonWriter.toJson;
-import static org.apache.ignite.internal.processors.query.calcite.util.Commons.FRAMEWORK_CONFIG;
-import static org.apache.ignite.internal.util.CollectionUtils.first;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
+
 import org.apache.calcite.plan.Contexts;
 import org.apache.calcite.plan.ConventionTraitDef;
 import org.apache.calcite.plan.RelOptUtil;
@@ -81,22 +72,29 @@ import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
+import static org.apache.calcite.tools.Frameworks.createRootSchema;
+import static org.apache.calcite.tools.Frameworks.newConfigBuilder;
+import static org.apache.ignite.internal.processors.query.calcite.externalize.RelJsonWriter.toJson;
+import static org.apache.ignite.internal.processors.query.calcite.util.Commons.FRAMEWORK_CONFIG;
+import static org.apache.ignite.internal.util.CollectionUtils.first;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 /**
  *
  */
 public class PlannerTest extends AbstractPlannerTest {
-    /**
-     *
-     */
+    /** */
     private static List<String> NODES;
-
+    
     @BeforeAll
     public static void init() {
         NODES = new ArrayList<>(4);
 
-        for (int i = 0; i < 4; i++) {
+        for (int i = 0; i < 4; i++)
             NODES.add(UUID.randomUUID().toString());
-        }
     }
 
     /**
@@ -107,19 +105,19 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
         };
 
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
@@ -128,30 +126,30 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.projectId = p.id0 + 1"
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.projectId = p.id0 + 1" +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                ConventionTraitDef.INSTANCE
+            ConventionTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -183,19 +181,19 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
         };
 
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
@@ -204,30 +202,30 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM Project pp"
-                + ") p "
-                + "ON d.projectId = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM Project pp" +
+            ") p " +
+            "ON d.projectId = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                ConventionTraitDef.INSTANCE
+            ConventionTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -259,19 +257,19 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
         };
 
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
@@ -280,25 +278,26 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, (SELECT p.name FROM Project p WHERE p.id = d.id) name, d.projectId FROM Developer d";
+        String sql = "SELECT d.id, (SELECT p.name FROM Project p WHERE p.id = d.id) name, d.projectId " +
+            "FROM Developer d";
 
         RelTraitDef<?>[] traitDefs = {
-                ConventionTraitDef.INSTANCE
+            ConventionTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -330,57 +329,51 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public IgniteIndex getIndex(String idxName) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public IgniteIndex getIndex(String idxName) {
                 return new IgniteIndex(null, null, null);
             }
 
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2),
-                        select(NODES, 2, 0),
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2)
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2),
+                    select(NODES, 2, 0),
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2)
                 ));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public IgniteIndex getIndex(String idxName) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public IgniteIndex getIndex(String idxName) {
                 return new IgniteIndex(null, null, null);
             }
 
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2),
-                        select(NODES, 2, 0),
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2)
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2),
+                    select(NODES, 2, 0),
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2)
                 ));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
@@ -391,30 +384,30 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.projectId = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.projectId = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                ConventionTraitDef.INSTANCE
+            ConventionTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -453,25 +446,23 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public IgniteDistribution distribution() {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public IgniteDistribution distribution() {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
@@ -482,35 +473,35 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d "
-                + "JOIN ("
-                + "   SELECT pp.id as id0, pp.ver as ver0 "
-                + "   FROM PUBLIC.Project pp"
-                + ") p ON d.projectId = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d " +
+            "JOIN (" +
+            "   SELECT pp.id as id0, pp.ver as ver0 " +
+            "   FROM PUBLIC.Project pp" +
+            ") p ON d.projectId = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -536,9 +527,9 @@ public class PlannerTest extends AbstractPlannerTest {
 
             // Transformation chain
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -556,46 +547,42 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2),
-                        select(NODES, 2, 0),
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2)
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2),
+                    select(NODES, 2, 0),
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2)
                 ));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2),
-                        select(NODES, 2, 0),
-                        select(NODES, 0, 1),
-                        select(NODES, 1, 2)));
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2),
+                    select(NODES, 2, 0),
+                    select(NODES, 0, 1),
+                    select(NODES, 1, 2)));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
@@ -606,33 +593,33 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.id = p.id0";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.id = p.id0";
 
         RelTraitDef<?>[] traitDefs = {
-                ConventionTraitDef.INSTANCE,
-                DistributionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            ConventionTraitDef.INSTANCE,
+            DistributionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         assertNotNull(ctx);
 
@@ -660,9 +647,9 @@ public class PlannerTest extends AbstractPlannerTest {
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
 
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -672,7 +659,7 @@ public class PlannerTest extends AbstractPlannerTest {
         assertNotNull(relRoot);
 
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
-                new Splitter().go((IgniteRel) relRoot.rel)), null);
+            new Splitter().go((IgniteRel) relRoot.rel)), null);
 
         assertNotNull(plan);
 
@@ -691,35 +678,31 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0, 1, 2, 3));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0, 1, 2, 3));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -730,34 +713,34 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, (d.id + 1) as id2, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.id = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, (d.id + 1) as id2, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.id = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -783,9 +766,9 @@ public class PlannerTest extends AbstractPlannerTest {
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
 
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -795,7 +778,7 @@ public class PlannerTest extends AbstractPlannerTest {
         assertNotNull(relRoot);
 
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
-                new Splitter().go((IgniteRel) relRoot.rel)), null);
+            new Splitter().go((IgniteRel) relRoot.rel)), null);
 
         assertNotNull(plan);
 
@@ -814,40 +797,36 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
-                        select(NODES, 1, 2),
-                        select(NODES, 2, 3),
-                        select(NODES, 3, 0),
-                        select(NODES, 0, 1)
+                    select(NODES, 1, 2),
+                    select(NODES, 2, 3),
+                    select(NODES, 3, 0),
+                    select(NODES, 0, 1)
                 ));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
@@ -858,34 +837,34 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.id = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.id = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -911,9 +890,9 @@ public class PlannerTest extends AbstractPlannerTest {
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
 
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -923,7 +902,7 @@ public class PlannerTest extends AbstractPlannerTest {
         assertNotNull(relRoot);
 
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
-                new Splitter().go((IgniteRel) relRoot.rel)), null);
+            new Splitter().go((IgniteRel) relRoot.rel)), null);
 
         assertNotNull(plan);
 
@@ -940,39 +919,35 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 1, 2, 3));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
-                        select(NODES, 0),
-                        select(NODES, 1),
-                        select(NODES, 2)
+                    select(NODES, 0),
+                    select(NODES, 1),
+                    select(NODES, 2)
                 ));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
@@ -983,34 +958,34 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.projectId = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.projectId = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -1036,9 +1011,9 @@ public class PlannerTest extends AbstractPlannerTest {
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
 
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -1048,7 +1023,7 @@ public class PlannerTest extends AbstractPlannerTest {
         assertNotNull(relRoot);
 
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
-                new Splitter().go((IgniteRel) relRoot.rel)), null);
+            new Splitter().go((IgniteRel) relRoot.rel)), null);
 
         assertNotNull(plan);
 
@@ -1067,39 +1042,35 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
-                        select(NODES, 1),
-                        select(NODES, 2),
-                        select(NODES, 3)
+                    select(NODES, 1),
+                    select(NODES, 2),
+                    select(NODES, 3)
                 ));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
@@ -1110,34 +1081,34 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.projectId = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.projectId = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -1163,9 +1134,9 @@ public class PlannerTest extends AbstractPlannerTest {
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
 
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -1175,7 +1146,7 @@ public class PlannerTest extends AbstractPlannerTest {
         assertNotNull(relRoot);
 
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
-                new Splitter().go((IgniteRel) relRoot.rel)), null);
+            new Splitter().go((IgniteRel) relRoot.rel)), null);
 
         assertNotNull(plan);
 
@@ -1192,35 +1163,31 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 2));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public ColocationGroup colocationGroup(PlanningContext ctx) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0, 1));
             }
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -1231,39 +1198,39 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.projectId = p.ver0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.projectId = p.ver0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
         try (IgnitePlanner planner = ctx.planner()) {
-            planner.setDisabledRules(ImmutableSet.of("CorrelatedNestedLoopJoin"));
+            planner.setDisabledRules(Set.of("CorrelatedNestedLoopJoin"));
 
             assertNotNull(planner);
 
@@ -1286,9 +1253,9 @@ public class PlannerTest extends AbstractPlannerTest {
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
 
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -1298,7 +1265,7 @@ public class PlannerTest extends AbstractPlannerTest {
         assertNotNull(relRoot);
 
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
-                new Splitter().go((IgniteRel) relRoot.rel)), null);
+            new Splitter().go((IgniteRel) relRoot.rel)), null);
 
         assertNotNull(plan);
 
@@ -1309,33 +1276,29 @@ public class PlannerTest extends AbstractPlannerTest {
         assertEquals(2, plan.fragments().size());
     }
 
-    /**
-     *
-     */
+    /** */
     @Test
     public void testSerializationDeserialization() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable developer = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("PROJECTID", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public IgniteDistribution distribution() {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("PROJECTID", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
 
         TestTable project = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("VER", f.createJavaType(Integer.class))
-                        .build()) {
-            @Override
-            public IgniteDistribution distribution() {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("VER", f.createJavaType(Integer.class))
+                .build()) {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
@@ -1346,34 +1309,34 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("PROJECT", project);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
-                + "FROM PUBLIC.Developer d JOIN ("
-                + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
-                + ") p "
-                + "ON d.projectId = p.id0 "
-                + "WHERE (d.projectId + 1) > ?";
+        String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 " +
+            "FROM PUBLIC.Developer d JOIN (" +
+            "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp" +
+            ") p " +
+            "ON d.projectId = p.id0 " +
+            "WHERE (d.projectId + 1) > ?";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelNode rel;
 
@@ -1397,35 +1360,34 @@ public class PlannerTest extends AbstractPlannerTest {
 
             // Transformation chain
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .simplify();
 
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
         }
 
         assertNotNull(rel);
 
-        List<Fragment> fragments = new Splitter().go((IgniteRel) rel);
+        List<Fragment> fragments = new Splitter().go((IgniteRel)rel);
         List<String> serialized = new ArrayList<>(fragments.size());
 
-        for (Fragment fragment : fragments) {
+        for (Fragment fragment : fragments)
             serialized.add(toJson(fragment.root()));
-        }
 
         assertNotNull(serialized);
 
         ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         List<RelNode> nodes = new ArrayList<>();
 
@@ -1447,12 +1409,11 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable testTbl = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("VAL", f.createJavaType(String.class))
-                        .build()) {
-            @Override
-            public IgniteDistribution distribution() {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("VAL", f.createJavaType(String.class))
+                .build()) {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.single();
             }
         };
@@ -1462,33 +1423,34 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("TEST", testTbl);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "SELECT val from (\n"
-                + "   SELECT * \n"
-                + "   FROM TEST \n"
-                + "   WHERE VAL = 10) \n"
-                + "WHERE VAL = 10";
+        String sql = "" +
+            "SELECT val from (\n" +
+            "   SELECT * \n" +
+            "   FROM TEST \n" +
+            "   WHERE VAL = 10) \n" +
+            "WHERE VAL = 10";
 
         RelTraitDef<?>[] traitDefs = {
-                ConventionTraitDef.INSTANCE,
-                DistributionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            ConventionTraitDef.INSTANCE,
+            DistributionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .build())
-                .query(sql)
-                .parameters(2)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .build())
+            .query(sql)
+            .parameters(2)
+            .build();
 
         RelRoot relRoot;
 
@@ -1514,8 +1476,8 @@ public class PlannerTest extends AbstractPlannerTest {
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
 
             RelTraitSet desired = rel.getCluster()
-                    .traitSetOf(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single());
+                .traitSetOf(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single());
 
             RelNode phys = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
@@ -1525,16 +1487,14 @@ public class PlannerTest extends AbstractPlannerTest {
 
             // Counts filters af the plan.
             phys.childrenAccept(
-                    new RelVisitor() {
-                        @Override
-                        public void visit(RelNode node, int ordinal, RelNode parent) {
-                            if (node instanceof IgniteFilter) {
-                                filterCnt.incrementAndGet();
-                            }
+                new RelVisitor() {
+                    @Override public void visit(RelNode node, int ordinal, RelNode parent) {
+                        if (node instanceof IgniteFilter)
+                            filterCnt.incrementAndGet();
 
-                            super.visit(node, ordinal, parent);
-                        }
+                        super.visit(node, ordinal, parent);
                     }
+                }
             );
 
             // Checks that two filter merged into one filter.
@@ -1555,26 +1515,24 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable emp = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("DEPTNO", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("DEPTNO", f.createJavaType(Integer.class))
+                .build()) {
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
 
         TestTable dept = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("DEPTNO", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("DEPTNO", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .build()) {
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -1585,31 +1543,31 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("DEPT", dept);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
-        String sql = "select d.deptno, e.deptno "
-                + "from dept d, emp e "
-                + "where d.deptno + e.deptno = 2";
+        String sql = "select d.deptno, e.deptno " +
+            "from dept d, emp e " +
+            "where d.deptno + e.deptno = 2";
 
         RelTraitDef<?>[] traitDefs = {
-                DistributionTraitDef.INSTANCE,
-                ConventionTraitDef.INSTANCE,
-                RelCollationTraitDef.INSTANCE,
-                RewindabilityTraitDef.INSTANCE,
-                CorrelationTraitDef.INSTANCE
+            DistributionTraitDef.INSTANCE,
+            ConventionTraitDef.INSTANCE,
+            RelCollationTraitDef.INSTANCE,
+            RewindabilityTraitDef.INSTANCE,
+            CorrelationTraitDef.INSTANCE
         };
 
         PlanningContext ctx = PlanningContext.builder()
-                .localNodeId(first(NODES))
-                .originatingNodeId(first(NODES))
-                .parentContext(Contexts.empty())
-                .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
-                        .defaultSchema(schema)
-                        .traitDefs(traitDefs)
-                        .costFactory(new IgniteCostFactory(1, 100, 1, 1))
-                        .build())
-                .query(sql)
-                .build();
+            .localNodeId(first(NODES))
+            .originatingNodeId(first(NODES))
+            .parentContext(Contexts.empty())
+            .frameworkConfig(newConfigBuilder(FRAMEWORK_CONFIG)
+                .defaultSchema(schema)
+                .traitDefs(traitDefs)
+                .costFactory(new IgniteCostFactory(1, 100, 1, 1))
+                .build())
+            .query(sql)
+            .build();
 
         RelRoot relRoot;
 
@@ -1632,54 +1590,51 @@ public class PlannerTest extends AbstractPlannerTest {
             RelNode rel = relRoot.rel;
 
             assertNotNull(rel);
-            assertEquals("LogicalFilter(condition=[=(CAST(+($0, $1)):INTEGER, 2)])\n"
-                            + "  LogicalJoin(condition=[true], joinType=[inner])\n"
-                            + "    LogicalProject(DEPTNO=[$0])\n"
-                            + "      IgniteLogicalTableScan(table=[[PUBLIC, DEPT]])\n"
-                            + "    LogicalProject(DEPTNO=[$2])\n"
-                            + "      IgniteLogicalTableScan(table=[[PUBLIC, EMP]])\n",
-                    RelOptUtil.toString(rel));
+            assertEquals("" +
+                    "LogicalFilter(condition=[=(CAST(+($0, $1)):INTEGER, 2)])\n" +
+                    "  LogicalJoin(condition=[true], joinType=[inner])\n" +
+                    "    LogicalProject(DEPTNO=[$0])\n" +
+                    "      IgniteLogicalTableScan(table=[[PUBLIC, DEPT]])\n" +
+                    "    LogicalProject(DEPTNO=[$2])\n" +
+                    "      IgniteLogicalTableScan(table=[[PUBLIC, EMP]])\n",
+                RelOptUtil.toString(rel));
 
             // Transformation chain
             RelTraitSet desired = rel.getCluster().traitSet()
-                    .replace(IgniteConvention.INSTANCE)
-                    .replace(IgniteDistributions.single())
-                    .replace(CorrelationTrait.UNCORRELATED)
-                    .simplify();
+                .replace(IgniteConvention.INSTANCE)
+                .replace(IgniteDistributions.single())
+                .replace(CorrelationTrait.UNCORRELATED)
+                .simplify();
 
             IgniteRel phys = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
 
             assertNotNull(phys);
             assertEquals(
-                    "IgniteCorrelatedNestedLoopJoin(condition=[=(CAST(+($0, $1)):INTEGER, 2)], joinType=[inner], "
-                            + "correlationVariables=[[$cor1]])\n"
-                            + "  IgniteTableScan(table=[[PUBLIC, DEPT]], requiredColumns=[{0}])\n"
-                            + "  IgniteTableScan(table=[[PUBLIC, EMP]], filters=[=(CAST(+($cor1.DEPTNO, $t0)):INTEGER, 2)], "
-                            + "requiredColumns=[{2}])\n",
-                    RelOptUtil.toString(phys),
-                    "Invalid plan:\n" + RelOptUtil.toString(phys)
+                "IgniteCorrelatedNestedLoopJoin(condition=[=(CAST(+($0, $1)):INTEGER, 2)], joinType=[inner], " +
+                    "correlationVariables=[[$cor1]])\n" +
+                    "  IgniteTableScan(table=[[PUBLIC, DEPT]], requiredColumns=[{0}])\n" +
+                    "  IgniteTableScan(table=[[PUBLIC, EMP]], filters=[=(CAST(+($cor1.DEPTNO, $t0)):INTEGER, 2)], requiredColumns=[{2}])\n",
+                RelOptUtil.toString(phys),
+                "Invalid plan:\n" + RelOptUtil.toString(phys)
             );
 
             checkSplitAndSerialization(phys, publicSchema);
         }
     }
 
-    /**
-     *
-     */
+    /** */
     @Test
     public void testMergeJoin() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable emp = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("DEPTNO", f.createJavaType(Integer.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("DEPTNO", f.createJavaType(Integer.class))
+                .build()) {
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -1687,13 +1642,12 @@ public class PlannerTest extends AbstractPlannerTest {
         emp.addIndex(new IgniteIndex(RelCollations.of(ImmutableIntList.of(1, 2)), "emp_idx", emp));
 
         TestTable dept = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("DEPTNO", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .build()) {
+            new RelDataTypeFactory.Builder(f)
+                .add("DEPTNO", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .build()) {
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -1706,38 +1660,36 @@ public class PlannerTest extends AbstractPlannerTest {
         publicSchema.addTable("DEPT", dept);
 
         SchemaPlus schema = createRootSchema(false)
-                .add("PUBLIC", publicSchema);
+            .add("PUBLIC", publicSchema);
 
         String sql = "select * from dept d join emp e on d.deptno = e.deptno and e.name = d.name order by e.name, d.deptno";
 
         IgniteRel phys = physicalPlan(sql, publicSchema);
 
         assertNotNull(phys);
-        assertEquals("IgniteMergeJoin(condition=[AND(=($0, $4), =($3, $1))], joinType=[inner], leftCollation=[[0, 1]], "
-                        + "rightCollation=[[2, 1]])\n"
-                        + "  IgniteIndexScan(table=[[PUBLIC, DEPT]], index=[dep_idx])\n"
-                        + "  IgniteIndexScan(table=[[PUBLIC, EMP]], index=[emp_idx])\n",
-                RelOptUtil.toString(phys));
+        assertEquals("" +
+                "IgniteMergeJoin(condition=[AND(=($0, $4), =($3, $1))], joinType=[inner], leftCollation=[[0, 1]], " +
+                "rightCollation=[[2, 1]])\n" +
+                "  IgniteIndexScan(table=[[PUBLIC, DEPT]], index=[dep_idx])\n" +
+                "  IgniteIndexScan(table=[[PUBLIC, EMP]], index=[emp_idx])\n",
+            RelOptUtil.toString(phys));
 
         checkSplitAndSerialization(phys, publicSchema);
     }
 
-    /**
-     *
-     */
+    /** */
     @Test
     public void testMergeJoinIsNotAppliedForNonEquiJoin() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable emp = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .add("DEPTNO", f.createJavaType(Integer.class))
-                        .build(), RewindabilityTrait.REWINDABLE, 1000) {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .add("DEPTNO", f.createJavaType(Integer.class))
+                .build(), RewindabilityTrait.REWINDABLE, 1000) {
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -1745,13 +1697,12 @@ public class PlannerTest extends AbstractPlannerTest {
         emp.addIndex(new IgniteIndex(RelCollations.of(ImmutableIntList.of(1, 2)), "emp_idx", emp));
 
         TestTable dept = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("DEPTNO", f.createJavaType(Integer.class))
-                        .add("NAME", f.createJavaType(String.class))
-                        .build(), RewindabilityTrait.REWINDABLE, 100) {
+            new RelDataTypeFactory.Builder(f)
+                .add("DEPTNO", f.createJavaType(Integer.class))
+                .add("NAME", f.createJavaType(String.class))
+                .build(), RewindabilityTrait.REWINDABLE, 100) {
 
-            @Override
-            public IgniteDistribution distribution() {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -1768,12 +1719,13 @@ public class PlannerTest extends AbstractPlannerTest {
         RelNode phys = physicalPlan(sql, publicSchema, "CorrelatedNestedLoopJoin");
 
         assertNotNull(phys);
-        assertEquals("IgniteSort(sort0=[$3], sort1=[$0], dir0=[ASC], dir1=[ASC])\n"
-                        + "  IgniteProject(DEPTNO=[$3], NAME=[$4], ID=[$0], NAME0=[$1], DEPTNO0=[$2])\n"
-                        + "    IgniteNestedLoopJoin(condition=[AND(=($3, $2), >=($1, $4))], joinType=[inner])\n"
-                        + "      IgniteIndexScan(table=[[PUBLIC, EMP]], index=[emp_idx])\n"
-                        + "      IgniteIndexScan(table=[[PUBLIC, DEPT]], index=[dep_idx])\n",
-                RelOptUtil.toString(phys));
+        assertEquals("" +
+                "IgniteSort(sort0=[$3], sort1=[$0], dir0=[ASC], dir1=[ASC])\n" +
+                "  IgniteProject(DEPTNO=[$3], NAME=[$4], ID=[$0], NAME0=[$1], DEPTNO0=[$2])\n" +
+                "    IgniteNestedLoopJoin(condition=[AND(=($3, $2), >=($1, $4))], joinType=[inner])\n" +
+                "      IgniteIndexScan(table=[[PUBLIC, EMP]], index=[emp_idx])\n" +
+                "      IgniteIndexScan(table=[[PUBLIC, DEPT]], index=[dep_idx])\n",
+            RelOptUtil.toString(phys));
     }
 
     /**
@@ -1784,12 +1736,11 @@ public class PlannerTest extends AbstractPlannerTest {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         TestTable testTbl = new TestTable(
-                new RelDataTypeFactory.Builder(f)
-                        .add("ID", f.createJavaType(Integer.class))
-                        .add("VAL", f.createJavaType(String.class))
-                        .build()) {
-            @Override
-            public IgniteDistribution distribution() {
+            new RelDataTypeFactory.Builder(f)
+                .add("ID", f.createJavaType(Integer.class))
+                .add("VAL", f.createJavaType(String.class))
+                .build()) {
+            @Override public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
@@ -1800,102 +1751,97 @@ public class PlannerTest extends AbstractPlannerTest {
 
         String sql = "SELECT * FROM TEST OFFSET 10 ROWS FETCH FIRST 10 ROWS ONLY";
 
-        IgniteRel phys0 = physicalPlan(sql, publicSchema);
+        {
+            IgniteRel phys = physicalPlan(sql, publicSchema);
 
-        assertNotNull(phys0);
+            assertNotNull(phys);
 
-        AtomicInteger limit0 = new AtomicInteger();
-        AtomicBoolean sort0 = new AtomicBoolean();
+            AtomicInteger limit = new AtomicInteger();
+            AtomicBoolean sort = new AtomicBoolean();
 
-        relTreeVisit(phys0, (node, ordinal, parent) -> {
-                    if (node instanceof IgniteLimit) {
-                        limit0.incrementAndGet();
-                    }
+            relTreeVisit(phys, (node, ordinal, parent) -> {
+                    if (node instanceof IgniteLimit)
+                        limit.incrementAndGet();
 
-                    if (node instanceof IgniteSort) {
-                        sort0.set(true);
-                    }
+                    if (node instanceof IgniteSort)
+                        sort.set(true);
                 }
-        );
+            );
 
-        String errMsg0 = "Invalid plan: \n" + RelOptUtil.toString(phys0);
+            String errMsg = "Invalid plan: \n" + RelOptUtil.toString(phys);
 
-        assertEquals(1, limit0.get(), errMsg0);
-        assertFalse(sort0.get(), errMsg0);
+            assertEquals(1, limit.get(), errMsg);
+            assertFalse(sort.get(), errMsg);
 
-        checkSplitAndSerialization(phys0, publicSchema);
+            checkSplitAndSerialization(phys, publicSchema);
+        }
 
         sql = "SELECT * FROM TEST ORDER BY ID OFFSET 10 ROWS FETCH FIRST 10 ROWS ONLY";
 
-        IgniteRel phys1 = physicalPlan(sql, publicSchema);
+        {
+            IgniteRel phys = physicalPlan(sql, publicSchema);
 
-        assertNotNull(phys1);
+            assertNotNull(phys);
 
-        AtomicInteger limit1 = new AtomicInteger();
-        AtomicBoolean sort1 = new AtomicBoolean();
+            AtomicInteger limit = new AtomicInteger();
+            AtomicBoolean sort = new AtomicBoolean();
 
-        relTreeVisit(phys1, (node, ordinal, parent) -> {
-                    if (node instanceof IgniteLimit) {
-                        limit1.incrementAndGet();
-                    }
+            relTreeVisit(phys, (node, ordinal, parent) -> {
+                    if (node instanceof IgniteLimit)
+                        limit.incrementAndGet();
 
-                    if (node instanceof IgniteSort) {
-                        sort1.set(true);
-                    }
+                    if (node instanceof IgniteSort)
+                        sort.set(true);
                 }
-        );
+            );
 
-        String errMsg1 = "Invalid plan: \n" + RelOptUtil.toString(phys1);
+            String errMsg = "Invalid plan: \n" + RelOptUtil.toString(phys);
 
-        assertEquals(1, limit1.get(), errMsg1);
-        assertTrue(sort1.get(), errMsg1);
+            assertEquals(1, limit.get(), errMsg);
+            assertTrue(sort.get(), errMsg);
 
-        checkSplitAndSerialization(phys1, publicSchema);
+            checkSplitAndSerialization(phys, publicSchema);
+        }
     }
 
-    /**
-     *
-     */
+    /** */
     @Test
     public void testNotStandardFunctions() throws Exception {
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
 
         publicSchema.addTable(
-                "TEST",
-                new TestTable(
-                        new RelDataTypeFactory.Builder(f)
-                                .add("ID", f.createJavaType(Integer.class))
-                                .add("VAL", f.createJavaType(String.class))
-                                .build()) {
+            "TEST",
+            new TestTable(
+                new RelDataTypeFactory.Builder(f)
+                    .add("ID", f.createJavaType(Integer.class))
+                    .add("VAL", f.createJavaType(String.class))
+                    .build()) {
 
-                    @Override
-                    public IgniteDistribution distribution() {
-                        return IgniteDistributions.affinity(0, "TEST", "hash");
-                    }
+                @Override public IgniteDistribution distribution() {
+                    return IgniteDistributions.affinity(0, "TEST", "hash");
                 }
+            }
         );
 
         String[] queries = {
-                "select REVERSE(val) from TEST", // MYSQL
-                "select TO_DATE(val, 'yyyymmdd') from TEST" // ORACLE
+            "select REVERSE(val) from TEST", // MYSQL
+            "select TO_DATE(val, 'yyyymmdd') from TEST" // ORACLE
         };
 
         for (String sql : queries) {
             IgniteRel phys = physicalPlan(
-                    sql,
-                    publicSchema
+                sql,
+                publicSchema
             );
 
             checkSplitAndSerialization(phys, publicSchema);
         }
     }
 
-    /**
-     *
-     */
+    /** */
     private List<String> intermediateMapping(long topVer, boolean single,
-            @Nullable Predicate<ClusterNode> filter) {
+        @Nullable Predicate<ClusterNode> filter) {
         return single ? select(NODES, 0) : select(NODES, 0, 1, 2, 3);
     }
 }
