@@ -27,6 +27,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import org.apache.ignite.Ignite;
@@ -37,6 +38,8 @@ import org.apache.ignite.configuration.schemas.network.NetworkConfiguration;
 import org.apache.ignite.configuration.schemas.rest.RestConfiguration;
 import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
+import org.apache.ignite.configuration.schemas.store.DataStorageConfiguration;
+import org.apache.ignite.configuration.schemas.table.TableValidator;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
 import org.apache.ignite.internal.baseline.BaselineManager;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
@@ -50,6 +53,7 @@ import org.apache.ignite.internal.metastorage.server.persistence.RocksDBKeyValue
 import org.apache.ignite.internal.processors.query.calcite.QueryProcessor;
 import org.apache.ignite.internal.processors.query.calcite.SqlQueryProcessor;
 import org.apache.ignite.internal.raft.Loza;
+import org.apache.ignite.internal.schema.configuration.TableValidatorImpl;
 import org.apache.ignite.internal.table.distributed.TableManager;
 import org.apache.ignite.internal.vault.VaultManager;
 import org.apache.ignite.internal.vault.VaultService;
@@ -61,7 +65,6 @@ import org.apache.ignite.lang.NodeStoppingException;
 import org.apache.ignite.network.ClusterLocalConfiguration;
 import org.apache.ignite.network.ClusterService;
 import org.apache.ignite.network.MessageSerializationRegistryImpl;
-import org.apache.ignite.network.StaticNodeFinder;
 import org.apache.ignite.network.scalecube.ScaleCubeClusterServiceFactory;
 import org.apache.ignite.rest.RestModule;
 import org.apache.ignite.table.manager.IgniteTables;
@@ -133,78 +136,78 @@ public class IgniteImpl implements Ignite {
     /**
      * The Constructor.
      *
-     * @param name    Ignite node name.
+     * @param name Ignite node name.
      * @param workDir Work directory for the started node. Must not be {@code null}.
      */
     IgniteImpl(
-            String name,
-            Path workDir
+        String name,
+        Path workDir
     ) {
         this.name = name;
 
         vaultMgr = createVault(workDir);
 
         nodeCfgMgr = new ConfigurationManager(
-                Arrays.asList(
-                        NetworkConfiguration.KEY,
-                        NodeConfiguration.KEY,
-                        RestConfiguration.KEY,
-                        ClientConnectorConfiguration.KEY
-                ),
-                Map.of(),
-                new LocalConfigurationStorage(vaultMgr),
-                List.of()
+            Arrays.asList(
+                NetworkConfiguration.KEY,
+                NodeConfiguration.KEY,
+                RestConfiguration.KEY,
+                ClientConnectorConfiguration.KEY
+            ),
+            Map.of(),
+            new LocalConfigurationStorage(vaultMgr),
+            List.of()
         );
 
         clusterSvc = new ScaleCubeClusterServiceFactory().createClusterService(
-                new ClusterLocalConfiguration(
-                        name,
-                        new MessageSerializationRegistryImpl()
-                ),
-                nodeCfgMgr,
-                () -> StaticNodeFinder.fromConfiguration(nodeCfgMgr.configurationRegistry()
-                        .getConfiguration(NetworkConfiguration.KEY).value())
+            new ClusterLocalConfiguration(
+                name,
+                new MessageSerializationRegistryImpl()
+            ),
+            nodeCfgMgr.configurationRegistry().getConfiguration(NetworkConfiguration.KEY)
         );
 
         raftMgr = new Loza(clusterSvc, workDir);
 
         metaStorageMgr = new MetaStorageManager(
-                vaultMgr,
-                nodeCfgMgr,
-                clusterSvc,
-                raftMgr,
-                new RocksDBKeyValueStorage(workDir.resolve(METASTORAGE_DB_PATH))
+            vaultMgr,
+            nodeCfgMgr,
+            clusterSvc,
+            raftMgr,
+            new RocksDBKeyValueStorage(workDir.resolve(METASTORAGE_DB_PATH))
         );
 
         // TODO: IGNITE-15414 Schema validation refactoring with configuration validators.
         clusterCfgMgr = new ConfigurationManager(
-                Arrays.asList(
-                        ClusterConfiguration.KEY,
-                        TablesConfiguration.KEY
-                ),
-                Map.of(),
-                new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
-                Collections.singletonList(ExtendedTableConfigurationSchema.class)
+            Arrays.asList(
+                ClusterConfiguration.KEY,
+                TablesConfiguration.KEY,
+                DataStorageConfiguration.KEY
+            ),
+            Map.of(TableValidator.class, Set.of(TableValidatorImpl.INSTANCE)),
+            new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
+            Collections.singletonList(ExtendedTableConfigurationSchema.class)
         );
 
         baselineMgr = new BaselineManager(
-                clusterCfgMgr,
-                metaStorageMgr,
-                clusterSvc
+            clusterCfgMgr,
+            metaStorageMgr,
+            clusterSvc
         );
 
         distributedTblMgr = new TableManager(
-                clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
-                raftMgr,
-                baselineMgr,
-                clusterSvc.topologyService(),
-                metaStorageMgr,
-                getPartitionsStorePath(workDir)
+            clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
+            clusterCfgMgr.configurationRegistry().getConfiguration(DataStorageConfiguration.KEY),
+            raftMgr,
+            baselineMgr,
+            clusterSvc.topologyService(),
+            metaStorageMgr,
+            getPartitionsStorePath(workDir)
         );
 
         qryEngine = new SqlQueryProcessor(
-                clusterSvc,
-                distributedTblMgr
+            clusterSvc,
+            distributedTblMgr
         );
 
         restModule = new RestModule(nodeCfgMgr, clusterCfgMgr);
@@ -215,20 +218,20 @@ public class IgniteImpl implements Ignite {
     /**
      * Starts ignite node.
      *
-     * @param cfg Optional node configuration based on {@link org.apache.ignite.configuration.schemas.runner.NodeConfigurationSchema} and
-     *            {@link org.apache.ignite.configuration.schemas.network.NetworkConfigurationSchema}. Following rules are used for applying
-     *            the configuration properties:
-     *            <ol>
-     *            <li>Specified property overrides existing one or just applies itself if it wasn't
-     *            previously specified.</li>
-     *            <li>All non-specified properties either use previous value or use default one from
-     *            corresponding configuration schema.</li>
-     *            </ol>
-     *            So that, in case of initial node start (first start ever) specified configuration, supplemented with defaults, is
-     *            used. If no configuration was provided defaults are used for all configuration properties. In case of node
-     *            restart, specified properties override existing ones, non specified properties that also weren't specified
-     *            previously use default values. Please pay attention that previously specified properties are searched in the
-     *            {@code workDir} specified by the user.
+     * @param cfg Optional node configuration based on {@link org.apache.ignite.configuration.schemas.runner.NodeConfigurationSchema}
+     * and {@link org.apache.ignite.configuration.schemas.network.NetworkConfigurationSchema}. Following rules are used
+     * for applying the configuration properties:
+     * <ol>
+     * <li>Specified property overrides existing one or just applies itself if it wasn't
+     * previously specified.</li>
+     * <li>All non-specified properties either use previous value or use default one from
+     * corresponding configuration schema.</li>
+     * </ol>
+     * So that, in case of initial node start (first start ever) specified configuration, supplemented with defaults, is
+     * used. If no configuration was provided defaults are used for all configuration properties. In case of node
+     * restart, specified properties override existing ones, non specified properties that also weren't specified
+     * previously use default values. Please pay attention that previously specified properties are searched in the
+     * {@code workDir} specified by the user.
      */
     public void start(@Nullable String cfg) {
         List<IgniteComponent> startedComponents = new ArrayList<>();
@@ -236,55 +239,55 @@ public class IgniteImpl implements Ignite {
         try {
             // Vault startup.
             doStartComponent(
-                    name,
-                    startedComponents,
-                    vaultMgr
+                name,
+                startedComponents,
+                vaultMgr
             );
 
             vaultMgr.putName(name).join();
 
             // Node configuration manager startup.
             doStartComponent(
-                    name,
-                    startedComponents,
-                    nodeCfgMgr);
+                name,
+                startedComponents,
+                nodeCfgMgr);
 
             // Node configuration manager bootstrap.
             if (cfg != null) {
                 try {
                     nodeCfgMgr.bootstrap(cfg);
-                } catch (Exception e) {
-                    LOG.warn("Unable to parse user-specific configuration, default configuration will be used: {}",
-                            e.getMessage());
                 }
-            } else {
-                nodeCfgMgr.configurationRegistry().initializeDefaults();
+                catch (Exception e) {
+                    LOG.warn("Unable to parse user-specific configuration, default configuration will be used: {}",
+                        e.getMessage());
+                }
             }
+            else
+                nodeCfgMgr.configurationRegistry().initializeDefaults();
 
             // Start the remaining components.
             List<IgniteComponent> otherComponents = List.of(
-                    clusterSvc,
-                    raftMgr,
-                    metaStorageMgr,
-                    clusterCfgMgr,
-                    baselineMgr,
-                    distributedTblMgr,
-                    qryEngine,
-                    restModule,
-                    clientHandlerModule
+                clusterSvc,
+                raftMgr,
+                metaStorageMgr,
+                clusterCfgMgr,
+                baselineMgr,
+                distributedTblMgr,
+                qryEngine,
+                restModule,
+                clientHandlerModule
             );
 
-            for (IgniteComponent component : otherComponents) {
+            for (IgniteComponent component : otherComponents)
                 doStartComponent(name, startedComponents, component);
-            }
 
             // Deploy all registered watches because all components are ready and have registered their listeners.
             metaStorageMgr.deployWatches();
 
-            if (!status.compareAndSet(Status.STARTING, Status.STARTED)) {
+            if (!status.compareAndSet(Status.STARTING, Status.STARTED))
                 throw new NodeStoppingException();
-            }
-        } catch (Exception e) {
+        }
+        catch (Exception e) {
             String errMsg = "Unable to start node=[" + name + "].";
 
             LOG.error(errMsg, e);
@@ -302,24 +305,22 @@ public class IgniteImpl implements Ignite {
         AtomicBoolean explicitStop = new AtomicBoolean();
 
         status.getAndUpdate(status -> {
-            if (status == Status.STARTED) {
+            if (status == Status.STARTED)
                 explicitStop.set(true);
-            } else {
+            else
                 explicitStop.set(false);
-            }
 
             return Status.STOPPING;
         });
 
         if (explicitStop.get()) {
             doStopNode(List.of(vaultMgr, nodeCfgMgr, clusterSvc, raftMgr, metaStorageMgr, clusterCfgMgr, baselineMgr,
-                    distributedTblMgr, qryEngine, restModule, clientHandlerModule));
+                distributedTblMgr, qryEngine, restModule, clientHandlerModule));
         }
     }
 
     /** {@inheritDoc} */
-    @Override
-    public IgniteTables tables() {
+    @Override public IgniteTables tables() {
         return distributedTblMgr;
     }
 
@@ -328,21 +329,28 @@ public class IgniteImpl implements Ignite {
     }
 
     /** {@inheritDoc} */
-    @Override
-    public IgniteTransactions transactions() {
+    @Override public IgniteTransactions transactions() {
         return null;
     }
 
     /** {@inheritDoc} */
-    @Override
-    public void close() {
+    @Override public void close() {
         IgnitionManager.stop(name);
     }
 
     /** {@inheritDoc} */
-    @Override
-    public String name() {
+    @Override public String name() {
         return name;
+    }
+
+    /** {@inheritDoc} */
+    @Override public void setBaseline(Set<String> baselineNodes) {
+        try {
+            distributedTblMgr.setBaseline(baselineNodes);
+        }
+        catch (NodeStoppingException e) {
+            throw new IgniteException(e);
+        }
     }
 
     /**
@@ -367,23 +375,24 @@ public class IgniteImpl implements Ignite {
     }
 
     /**
-     * Checks node status. If it's {@link Status#STOPPING} then prevents further starting and throws NodeStoppingException that will lead to
-     * stopping already started components later on, otherwise starts component and add it to started components list.
+     * Checks node status. If it's {@link Status#STOPPING} then prevents further starting and throws NodeStoppingException that will
+     * lead to stopping already started components later on, otherwise starts component and add it to started components
+     * list.
      *
-     * @param nodeName          Node name.
+     * @param nodeName Node name.
      * @param startedComponents List of already started components for given node.
-     * @param component         Ignite component to start.
-     * @param <T>               Ignite component type.
+     * @param component Ignite component to start.
+     * @param <T> Ignite component type.
      * @throws NodeStoppingException If node stopping intention was detected.
      */
     private <T extends IgniteComponent> void doStartComponent(
-            @NotNull String nodeName,
-            @NotNull List<IgniteComponent> startedComponents,
-            @NotNull T component
+        @NotNull String nodeName,
+        @NotNull List<IgniteComponent> startedComponents,
+        @NotNull T component
     ) throws NodeStoppingException {
-        if (status.get() == Status.STOPPING) {
+        if (status.get() == Status.STOPPING)
             throw new NodeStoppingException("Node=[" + nodeName + "] was stopped.");
-        } else {
+        else {
             startedComponents.add(component);
 
             component.start();
@@ -391,35 +400,37 @@ public class IgniteImpl implements Ignite {
     }
 
     /**
-     * Calls {@link IgniteComponent#beforeNodeStop()} and then {@link IgniteComponent#stop()} for all components in start-reverse-order.
-     * Cleanups node started components map and node status map.
+     * Calls {@link IgniteComponent#beforeNodeStop()} and then {@link IgniteComponent#stop()} for all components in
+     * start-reverse-order. Cleanups node started components map and node status map.
      *
      * @param startedComponents List of already started components for given node.
      */
     private void doStopNode(@NotNull List<IgniteComponent> startedComponents) {
         ListIterator<IgniteComponent> beforeStopIter =
-                startedComponents.listIterator(startedComponents.size());
+            startedComponents.listIterator(startedComponents.size());
 
         while (beforeStopIter.hasPrevious()) {
             IgniteComponent componentToExecBeforeNodeStop = beforeStopIter.previous();
 
             try {
                 componentToExecBeforeNodeStop.beforeNodeStop();
-            } catch (Exception e) {
-                LOG.error("Unable to execute before node stop on the component=["
-                        + componentToExecBeforeNodeStop + "] within node=[" + name + ']', e);
+            }
+            catch (Exception e) {
+                LOG.error("Unable to execute before node stop on the component=[" +
+                    componentToExecBeforeNodeStop + "] within node=[" + name + ']', e);
             }
         }
 
         ListIterator<IgniteComponent> stopIter =
-                startedComponents.listIterator(startedComponents.size());
+            startedComponents.listIterator(startedComponents.size());
 
         while (stopIter.hasPrevious()) {
             IgniteComponent componentToStop = stopIter.previous();
 
             try {
                 componentToStop.stop();
-            } catch (Exception e) {
+            }
+            catch (Exception e) {
                 LOG.error("Unable to stop component=[" + componentToStop + "] within node=[" + name + ']', e);
             }
         }
@@ -433,7 +444,8 @@ public class IgniteImpl implements Ignite {
 
         try {
             Files.createDirectories(vaultPath);
-        } catch (IOException e) {
+        }
+        catch (IOException e) {
             throw new IgniteInternalException(e);
         }
 
@@ -452,7 +464,8 @@ public class IgniteImpl implements Ignite {
 
         try {
             Files.createDirectories(partitionsStore);
-        } catch (IOException e) {
+        }
+        catch (IOException e) {
             throw new IgniteInternalException("Failed to create directory for partitions storage: " + e.getMessage(), e);
         }
 
@@ -463,19 +476,13 @@ public class IgniteImpl implements Ignite {
      * Node state.
      */
     private enum Status {
-        /**
-         *
-         */
+        /** */
         STARTING,
 
-        /**
-         *
-         */
+        /** */
         STARTED,
 
-        /**
-         *
-         */
+        /** */
         STOPPING
     }
 }
